# siren_helper

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  setup.py  siren6_helper.pyw
data/: 6_items.json  monster_icon_filenames.json
data/6_dungeons/: chinmoku_shinzui.json  cho_shinzui.json  toguro_shinzui.json
misc/: fetch_siren6_dungeons.py  fetch_siren6_items.py  fetch_siren6_monster_icons.py  test_ocr.py
src/: config.py  config_dialog.py  define.py  direct_capture.py  dungeon_ocr.py  funcs.py  item.py  live_exploration_mode.py  logger.py  main_window.py  manpuku_ocr.py  obs_control.py  obs_dialog.py  obs_websocket_manager.py  screen_reader.py  shop_ocr.py  status_ocr.py  ui_en.py  ui_jp.py  update.py  websocket_server.py
template/: monster_icons.html  overlay.html  shop_price_candidates.html  vertical_overlay.html
